--- a/authDemo/package.json
+++ b/authDemo/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "mongoose": "^8.8.3"
   }
 }
